# smart-knn

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
benchmarks/: heatmaps.py
benchmarks/classification_tests/: test_classification.py  test_classification2.py  test_classification3.py  test_classification4.py  test_classification5.py
benchmarks/regression_tests/: test_regression.py  test_regression2.py  test_regression3.py  test_regression4.py
benchmarks/results/classification_results/: classification_results_batch3.csv  classification_results_batch4.csv  classification_results_batch5.csv
benchmarks/results/regression_results/: regression_results_batch1.csv  regression_results_batch2.csv  regression_results_batch3.csv  regression_results_batch4.csv
docs/: design.md  roadmap.md  theory.md  usage.md
smart_knn/: __init__.py  base_knn.py  data_processing.py  distance.py  evaluation.py  utils.py  weight_learning.py
tests/: test_distance.py  test_end_to_end.py  test_feature_filter.py  test_weight_learning.py
