[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-knn"
version = "0.1.0"
description = "A smarter, weighted, feature-selective KNN algorithm with automatic preprocessing."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Jashwanth", email="thatipamulajashwanthgoud@gmail.com" }
]
requires-python = ">=3.8"

dependencies = [
  "numpy>=2.2.6,<3.0",
  "pandas>=2.3.3,<3.0",
  "scikit-learn>=1.7.2,<2.0",
  "joblib>=1.5.2,<2.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["smart_knn*"]
exclude = [
  "benchmarks*",
  "docs*",
]

[project.urls]
Home = "https://github.com/thatipamula-jashwanth/smart-knn"
Issues = "https://github.com/thatipamula-jashwanth/smart-knn/issues"
