[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "smart-knn"
version = "0.1.1" 
description = "A smarter, weighted, feature-selective KNN algorithm with automatic preprocessing."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Jashwanth", email="thatipamulajashwanthgoud@gmail.com" }
]
requires-python = ">=3.8"

dependencies = [
  "numpy>=1.21",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "joblib>=1.2"
]

keywords = [
  "knn",
  "machine-learning",
  "smart-knn",
  "weighted-knn",
  "feature-selection",
  "distance-learning",
  "auto-ml",
  "regression",
  "classification"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["smart_knn*"]
exclude = [
  "benchmarks*",
  "docs*",
]


[project.urls]
Homepage = "https://github.com/thatipamula-jashwanth/smart-knn"
Documentation = "https://github.com/thatipamula-jashwanth/smart-knn"
Issues = "https://github.com/thatipamula-jashwanth/smart-knn/issues"
